--- a/package.json
+++ b/package.json
@@ -2,44 +2,11 @@
   "name": "cat-mbti",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chaolinchen.github.io/cat-mbti",
-  "description": "",
-  "main": "webpack.config.js",
   "scripts": {
     "start": "react-scripts start",
-    "dev": "webpack serve --mode development",
     "build": "react-scripts build",
-    "preview": "webpack serve --mode production",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.27.0",
-    "@types/node": "^16.18.82",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@types/react-router-dom": "^5.3.3",
-    "babel-loader": "^10.0.0",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.2",
-    "gh-pages": "^6.3.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.9.2",
-    "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.14",
-    "ts-loader": "^9.5.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.0.2"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -53,6 +20,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/html2canvas": "^0.5.35",
     "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.82",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
@@ -63,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
